--- a/local.properties
+++ b/local.properties
@@ -5,5 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Sep 25 01:14:12 CST 2023
-sdk.dir=C\:\\Users\\explosion\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
 
