note add a line

--- a/local.properties
+++ b/local.properties
@@ -6,5 +6,5 @@
 # header note.
 #Mon Sep 25 01:14:12 CST 2023
 
-sdk.dir=C\:\\Users\\USER\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\explosion\\AppData\\Local\\Android\\Sdk
 
