aes encrypt immediately

--- a/local.properties
+++ b/local.properties
@@ -5,14 +5,14 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Sep 25 01:14:12 CST 2023
-<<<<<<< HEAD
+#<<<<<<< HEAD
 sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
-=======
-
-<<<<<<< HEAD
-sdk.dir=C\:\\Users\\USER\\AppData\\Local\\Android\\Sdk
->>>>>>> 24df49349ce03c555abe78f96cfc0af41df5268b
-=======
-sdk.dir=C\:\\Users\\explosion\\AppData\\Local\\Android\\Sdk
->>>>>>> db3b2ebec862462de7e7686622eb479f5d6445c1
+#=======
+#
+#<<<<<<< HEAD
+#sdk.dir=C\:\\Users\\USER\\AppData\\Local\\Android\\Sdk
+#>>>>>>> 24df49349ce03c555abe78f96cfc0af41df5268b
+#=======
+#sdk.dir=C\:\\Users\\explosion\\AppData\\Local\\Android\\Sdk
+#>>>>>>> db3b2ebec862462de7e7686622eb479f5d6445c1
 
