pw error finish

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,7 @@
             android:theme="@style/Theme.Sfc_front.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
             </intent-filter>
         </activity>
         <activity
@@ -88,6 +89,7 @@
             android:theme="@style/Theme.Sfc_front.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
             </intent-filter>
         </activity>
         <activity
